# automaton-auditor

./: .env.example  README.md  pyproject.toml  result.txt
.github/: copilot-instructions.md
scripts/: e2e_langsmith.py  run_audit.py  test_langsmith.py
src/: graph.py  peer_grading_2026_03_01_04_07_41.md  state.py
src/nodes/: auditor.py  chief_justice.py  detective.py  evidence_aggregator.py  judges.py  quality_assurance.py
src/tools/: doc_tools.py  repo_tools.py
